--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
+    "ethers-multicall": "^0.2.2",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "swr": "^1.0.1"
+    "swr": "^1.0.1",
+    "web3": "^1.7.1"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.40",
+    "typescript": "^4.6.2"
   }
 }
