--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "redaxios": "^0.4.1",
     "swr": "^1.0.1",
     "web3": "^1.7.1"
   },
